packages/taquito-michel-codec/test/contracts_012/ill_typed/stack_bottom_ungetable.tz
parameter unit;
storage unit;
code {
       DROP;
       GET;
     }